--- a/src/components/sections/_section-news.pug
+++ b/src/components/sections/_section-news.pug
@@ -15,11 +15,11 @@ section.section-news
                                 },
                                 {
                                     title: "Почему нужно использовать оригинальные фильтры",
-                                    text: "Часто клиенты хотят сэкономить несколько тысяч рублей на фильтрах для ТО и покупают неоригинальные компоненты, что в дальнейшем может негативно сказываться на узлах и агрегатах и привести к дорогостоящим ремонтам."
+                                    text: "Надежность и долговечность – эти качества отличают не только оборудование Cat®, но и оригинальные запасные части, которые создаются на тех же заводах, проходят те же тесты контроля качества, что и техника производства Caterpillar®."
                                 },
                                 {
                                     title: "Почему нужно использовать оригинальные фильтры",
-                                    text: "Часто клиенты хотят сэкономить несколько тысяч рублей на фильтрах для ТО и покупают неоригинальные компоненты, что в дальнейшем может негативно сказываться на узлах и агрегатах и привести к дорогостоящим ремонтам."
+                                    text: "Машины Cat® заслуживают только самого лучшего. Вот почему их эксплуатация требует использования оригинальных запасных частей и расходных материалов Cat."
                                 }
                             ]
                         include ../../components/_news-card
