--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -77,7 +77,7 @@ block header
                                     a(href="javascript:void(0)") Сервис
                                     ul.submenu
                                         li
-                                            a(href="javascript:void(0)") Все услуги сервиса
+                                            a(href="services.html") Все услуги сервиса
                                         li
                                             a(href="javascript:void(0)") Капитальный ремонт двигателей
                                         li
