--- a/src/pages/news-detail.pug
+++ b/src/pages/news-detail.pug
@@ -7,3 +7,87 @@ block title
 block main
     include ../components/_breadcrumbs
     +breadcrumbs('Новостной блог', 'Почему нужно использовать оригинальные фильтры')
+    section.news-detail
+        .container
+            .news-detail__inner
+                h1 Почему нужно использовать оригинальные фильтры
+                p.
+                    Оригинальные фильтры на спецтехнику изготавливаются с
+                    использованием высококачественных материалов и проходят строгие
+                    тесты на соответствие стандартам производителя. Они обеспечивают
+                    надежную защиту от загрязнений и повреждений, продлевая срок
+                    службы двигателя и других систем техники.
+                    <br>
+                    <br>
+                    Китайские аналоги могут быть изготовлены из менее качественных
+                    материалов и не проходить такие же строгие тесты. Они могут иметь
+                    недостатки исполнения, что снижает их эффективность и может повлечь
+                    за собой серьезные последствия для техники, что может привести к
+                    дополнительным расходам на ремонт.
+                ul
+                    li.
+                        Лопнувший гидравлический фильтр, может плохо фильтровать масло,
+                        что приведет к быстрому износу гидравлического насоса и всей
+                        гидравлической системы
+                .news-detail__inner-images
+                    +img('news-detail-image-1.png')
+                    +img('news-detail-image-2.png')
+
+                ul
+                    li.
+                        Был установлен неоригинальный трансмиссионный фильтр,
+                        во время работы его раздавило маслом в корпусе, частицы
+                        пластикового корпуса попали в трансмиссию, что привело к
+                        ее разбору для осмотра на повреждения
+
+                .news-detail__inner-images
+                    +img('news-detail-image-3.png')
+                    +img('news-detail-image-4.png')
+
+                ul
+                    li.
+                        Использование неоригинального масла может привести к гораздо
+                        быстрому износу поршневой системы, что привлечет к дорогостоящему
+                        ремонту. На фото видно как сильно закоксовывается при использовании
+                        некачественного масла, в дальнейшем это приведет к залеганию поршневых
+                        колец и жору масла, а дальше к дорогому ремонту
+
+                .news-detail__inner-images
+                    +img('news-detail-image-5.png')
+                    +img('news-detail-image-6.png')
+                .news-detail__inner-summary
+                    p.
+                        В итоге, использование оригинальных фильтров на спецтехнике
+                        является более безопасным и надежным выбором, который
+                        обеспечивает максимальную защиту и долговечность техники.
+
+    section.section-news.news-detail__section-news
+        .container
+            .section-news__inner
+                .section-title Другие новости
+                .section-news__slider
+                    .swiper
+                        .swiper-wrapper
+                            -
+                                var newsItems = [
+                                    {
+                                        title: "Почему нужно использовать оригинальные фильтры",
+                                        text: "Часто клиенты хотят сэкономить несколько тысяч рублей на фильтрах для ТО и покупают неоригинальные компоненты, что в дальнейшем может негативно сказываться на узлах и агрегатах и привести к дорогостоящим ремонтам."
+                                    },
+                                    {
+                                        title: "Почему нужно использовать оригинальные фильтры",
+                                        text: "Надежность и долговечность – эти качества отличают не только оборудование Cat®, но и оригинальные запасные части, которые создаются на тех же заводах, проходят те же тесты контроля качества, что и техника производства Caterpillar®."
+                                    },
+                                    {
+                                        title: "Почему нужно использовать оригинальные фильтры",
+                                        text: "Машины Cat® заслуживают только самого лучшего. Вот почему их эксплуатация требует использования оригинальных запасных частей и расходных материалов Cat."
+                                    }
+                                ]
+                            include ../components/_news-card
+                            - var n = 2;
+                            while n > 0
+                                each item, index in newsItems
+                                    .swiper-slide
+                                        +newsCard(item.title, item.text, index)
+                                - n--;
+                        .swiper-pagination
