--- a/src/styles/components/_breadcrumbs.scss
+++ b/src/styles/components/_breadcrumbs.scss
@@ -2,42 +2,52 @@
 @use "../base/mixins" as *;
 
 .breadcrumbs {
-    margin-top: 20px;
-    margin-bottom: 40px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 
-    @include breakpoint(md) {
-        margin-bottom: 50px;
-    }
+  @include breakpoint(md) {
+    margin-bottom: 50px;
+  }
 
-    @include breakpoint(lg) {
-        margin-bottom: 60px;
-    }
+  @include breakpoint(lg) {
+    margin-bottom: 60px;
+  }
 }
 
 .breadcrumbs-wrapper {
-    @include flexAlignCenter;
-    gap: 20px;
-    max-width: 100vw;
-    overflow-x: auto;
+  @include flexAlignCenter;
+  gap: 20px;
+  max-width: 100vw;
+  overflow-x: auto;
+  overflow-y: hidden;
+
 }
 
 .breadcrumbs-item {
-    @include flexAlignCenter;
-    gap: 20px;
+  @include flexAlignCenter;
+  gap: 20px;
+  font-size: 14px;
+
+  @include breakpoint(md) {
+    font-size: 16px;
+  }
 
 
-    &:not(:first-child) {
-        &:before {
-            content: "";
-            display: block;
-            width: 20px;
-            height: 1px;
-            background: $brand;
-        }
+  &:not(:first-child) {
+    &:before {
+      content: "";
+      display: block;
+      width: 20px;
+      height: 1px;
+      background: $brand;
     }
+  }
 }
 
-.breadcrumbs-item span {
+.breadcrumbs-item {
+  span, a {
     user-select: none;
     white-space: nowrap;
+  }
 }
+
