--- a/src/styles/pages/_news-detail.scss
+++ b/src/styles/pages/_news-detail.scss
@@ -1,3 +1,90 @@
 @use "../base/variables" as *;
 @use "../base/mixins" as *;
 
+.news-detail {
+  &__inner {
+    @include breakpoint(md) {
+      font-size: 20px;
+    }
+
+    @include breakpoint(lg) {
+      @include columCountMaxWidth(9);
+    }
+
+    @include breakpoint(xl) {
+      @include columnCountMaxXlWidth(8);
+    }
+    p {
+      line-height: 160%;
+
+      & + p, & + ul {
+        margin-top: 12px;
+      }
+    }
+    ul, ol {
+      li {
+        line-height: 160%;
+        list-style: disc;
+        margin-left: 25px;
+
+        & + li {
+          margin-top: 12px;
+        }
+      }
+
+      & + p, & + img {
+        margin-top: 20px;
+      }
+    }
+
+    &-images {
+      display: grid;
+      gap: 10px;
+      margin-top: 20px;
+      grid-auto-rows: 459px;
+      margin-bottom: 25px;
+
+      @include breakpoint(md) {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        margin-bottom: 40px;
+      }
+
+      @include breakpoint(lg) {
+        gap: 20px;
+        margin-bottom: 60px;
+        grid-auto-rows: 565px;
+      }
+
+      img {
+        object-fit: cover;
+      }
+    }
+
+    &-summary {
+      padding: 16px;
+      background: $brand;
+      margin-top: 25px;
+
+      @include breakpoint(md) {
+        padding: 30px;
+        margin-top: 40px;
+      }
+
+      @include breakpoint(lg) {
+        margin-top: 60px;
+      }
+      p {
+        color: $black;
+        font-weight: 600;
+        line-height: 160%; /* 25.6px */
+      }
+    }
+  }
+}
+
+.news-detail__section-news {
+  .section-title {
+    text-align: unset;
+  }
+}
