--- a/src/includes/_footer.pug
+++ b/src/includes/_footer.pug
@@ -34,6 +34,8 @@ block footer
                             li
                                 a(href="javascript:void(0)").footer__link.footer__link--white Оплата и доставка
                             li
+                                a(href="return.html").footer__link.footer__link--white Обмен и возврат
+                            li
                                 a(href="javascript:void(0)").footer__link.footer__link--white Контакты
                 .footer__inner-contacts
                     .footer__inner-contacts-items
