--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -29,7 +29,7 @@ block header
                                 a(href="javascript:void(0)" rel="nofollow")
                                     include ../icons/icon_telegram.svg
                     .header__feedback
-                        button.btn.btn--brand Обратный звонок
+                        button(data-src="#popupCallback" data-fancybox).btn.btn--brand Обратный звонок
                     .header__adaptive
                         a(href="cart.html").header__cart
                             include ../icons/icon_cart.svg
@@ -68,7 +68,7 @@ block header
                                 a(href="javascript:void(0)") Масла
                     .header__search
                         input(type="search" placeholder="Поиск запчасти по артикулу").input.input--gray
-                        a(href='javascript:void(0)').header__search-icon
+                        a(href='search.html').header__search-icon
                             include ../icons/icon_search.svg
                     .header__nav
                         nav
@@ -95,7 +95,7 @@ block header
                                 li
                                     a(href="news.html") Новостной блог
                                 li
-                                    a(href="javascript:void(0)") Оплата и доставка
+                                    a(href="delivery.html") Оплата и доставка
                                 li
                                     a(href="contacts.html") Контакты
 
