--- a/src/pages/order.pug
+++ b/src/pages/order.pug
@@ -121,21 +121,21 @@ block main
                                         +img('payment-icon-1.png')
                                     .order__payment-item-title Банковская картой на сайте
                                     .order__payment-item-banks
-                                        +img('payment-banks-tbank.png')
-                                        +img('payment-banks-mir.png')
-                                        +img('payment-banks-visa.png')
-                                        +img('payment-banks-mastercard.png')
-                                        +img('payment-banks-sbp.png')
+                                        include ../icons/icon_t-bank.svg
+                                        include ../icons/icon_mir.svg
+                                        include ../icons/icon_visa.svg
+                                        include ../icons/icon_mastercard.svg
+                                        include ../icons/icon_sbp.svg
                                 .order__payment-item
                                     .order__payment-item-icon
                                         +img('payment-icon-2.png')
                                     .order__payment-item-title Банковской картой при получении
                                     .order__payment-item-banks
-                                        +img('payment-banks-tbank.png')
-                                        +img('payment-banks-mir.png')
-                                        +img('payment-banks-visa.png')
-                                        +img('payment-banks-mastercard.png')
-                                        +img('payment-banks-sbp.png')
+                                        include ../icons/icon_t-bank.svg
+                                        include ../icons/icon_mir.svg
+                                        include ../icons/icon_visa.svg
+                                        include ../icons/icon_mastercard.svg
+                                        include ../icons/icon_sbp.svg
                                 .order__payment-item
                                     .order__payment-item-icon
                                         +img('payment-icon-3.png')
