--- a/src/includes/_header.pug
+++ b/src/includes/_header.pug
@@ -100,7 +100,7 @@ block header
                                     a(href="contacts.html") Контакты
 
                     .header__user
-                        a(href="javascript:void(0)").header__user-account
+                        a(href="user.html").header__user-account
                             include ../icons/icon_user.svg
 
     include ../components/_sidebar
