--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,7 +8,10 @@
   --color-gray-04: #4A4A4A;
   --color-gray-05: #202020;
   --color-hover: #FFD752;
-  --color-error: #F50909;
+  --color-error-primary: #F50909;
+  --color-error-secondary: #FFE7E7;
+  --color-success-primary: #129831;
+  --color-success-secondary: #DAF9E1;
   --transition: .3s all ease-in-out;
 }
 
@@ -21,5 +24,8 @@ $gray-03: var(--color-gray-03);
 $gray-04: var(--color-gray-04);
 $gray-05: var(--color-gray-05);
 $hover: var(--color-hover);
-$error: var(--color-error);
+$error-primary: var(--color-error-primary);
+$error-secondary: var(--color-error-secondary);
+$success-primary: var(--color-success-primary);
+$success-secondary: var(--color-success-secondary);
 $transition: var(--transition);
