--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -14,7 +14,7 @@
   height: 100%;
   transition: $transition;
   max-width: 360px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &.show {
     transform: translateX(0);
