added personal accout pages

--- a/src/components/_sidebar.pug
+++ b/src/components/_sidebar.pug
@@ -9,7 +9,7 @@
                 .sidebar__nav-service-title(data-trigger) Сервис
             ul.sidebar__nav-links
         .sidebar__user
-            a(href='javascript:void(0)').btn.btn--gray Личный кабинет
+            a(href='user.html').btn.btn--gray Личный кабинет
         .sidebar__contacts
         .sidebar__socials
         .sidebar__feedback
